platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam01-ft_sqrt/runtime/traces/bundle-audit.exams-exam01-ft_sqrt/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam01-ft_sqrt/datasets/exercises/exams/exam01/ft_sqrt/tests/main.c: In function 'main':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam01-ft_sqrt/datasets/exercises/exams/exam01/ft_sqrt/tests/main.c:14:15: error: implicit declaration of function 'atoi' [-Werror=implicit-function-declaration]
   14 |     int num = atoi(argv[1]);
      |               ^~~~
cc1: all warnings being treated as errors
